--- a/python_tricks_lecture.ipynb
+++ b/python_tricks_lecture.ipynb
@@ -631,7 +631,7 @@
    "outputs": [],
    "source": [
     "def get_name(id):\n",
-    "    return data.get(id, 'Not found')"
+    "    return data.get(id)"
    ]
   },
   {
@@ -879,7 +879,8 @@
    "outputs": [],
    "source": [
     "data = {a: 'yes', b: 'no'}\n",
-    "print(f'resulting dictionary:\\n {data}')"
+    "print(f'resulting dictionary:\\n {data}')\n",
+    "hash(1)\n"
    ]
   },
   {
@@ -1193,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1207,26 +1208,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<0,1,0>\n"
+     ]
+    }
+   ],
    "source": [
     "print_vector(0, 1, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<[0, 1, 0],0,0>\n"
+     ]
+    }
+   ],
    "source": [
     "list_vector = [0, 1, 0]\n",
     "print_vector(list_vector)\n",
@@ -1235,26 +1252,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<0,1,0>\n"
+     ]
+    }
+   ],
    "source": [
     "print_vector(*list_vector)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<0,1,0>\n"
+     ]
+    }
+   ],
    "source": [
     "tuple_vector = (0, 1, 0)\n",
     "print_vector(*tuple_vector)"
@@ -1262,13 +1295,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<0,1,0>\n"
+     ]
+    }
+   ],
    "source": [
     "gen_vector = (x % 2 for x in range(3))\n",
     "print_vector(*gen_vector)"
@@ -1276,16 +1317,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<0,1,0>\n"
+     ]
+    }
+   ],
    "source": [
     "dict_vector = {'x': 0, 'y': 1, 'z': 0}\n",
     "print_vector(**dict_vector)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<0,0,0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_vector()"
    ]
   },
   {
@@ -1361,7 +1427,8 @@
     "\n",
     "data = 'blue'\n",
     "c = Foo(data)\n",
-    "print(c.data, data)"
+    "print(c.data, data)\n",
+    "print(id(data), id(c.data))"
    ]
   },
   {
@@ -1400,7 +1467,7 @@
     }
    },
    "source": [
-    "Not suprising, right? The objects are **immutable**, all is well. But what about this one?"
+    "Not suprising, right? But what about this one?"
    ]
   },
   {
@@ -1577,7 +1644,7 @@
    },
    "source": [
     "<div class=\"alert alert-success\">\n",
-    "    <strong>Lesson learned</strong>: The standard copy operator (like, instantiating new lists or using .copy etc.) only makes <strong>shallow copies</strong> of objects, i.e. it creates a copy of an object and populates it with references to the child objects. If the object is immutable, this is not an issues.\n",
+    "    <strong>Lesson learned</strong>: The standard copy operator (like, instantiating new lists or using .copy etc.) only makes <strong>shallow copies</strong> of objects, i.e. it creates a copy of an object and populates it with references to the child objects. \n",
     "</div>\n",
     "\n",
     "So, what can we do?"
@@ -2418,7 +2485,7 @@
     }
    },
    "source": [
-    "Cool, but also somewhat bulky. How about this nice _syntactic sugare_ @?"
+    "Cool, but also somewhat bulky. How about this nice _syntactic sugar_ @?"
    ]
   },
   {
@@ -2723,8 +2790,9 @@
    "source": [
     "class Bar(Foo):\n",
     "    def __init__(self):\n",
-    "        self.data = 1\n",
+    "        \n",
     "        super().__init__()\n",
+    "        self.data = 1\n",
     "        "
    ]
   },
